# hi

./: README.md  hi.cabal
app/: Main.hs
src/HI/: Action.hs  Base.hs  Evaluator.hs  Instances.hs  Parser.hs  Pretty.hs
test/: Spec.hs
test/HW3Tests/: Core.hs  T10Spec.hs  T11Spec.hs  T1Spec.hs  T2Spec.hs  T3Spec.hs  T4Spec.hs  T5Spec.hs  T6Spec.hs  T7Spec.hs  T8Spec.hs  T9Spec.hs
